--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@types/deep-equal": "^1.0.1",
+    "@types/node": "^14.14.25",
     "@types/react": "^16.9.49",
     "babel-loader": "^8.1.0",
     "react": "^16.13.1",
@@ -40,6 +41,6 @@
   },
   "peerDependencies": {
     "react": "^16.13.1",
-    "streamr-client": "^4.1.1"
+    "streamr-client": "^4.1.6"
   }
 }
