--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "streamr-client-react",
-  "version": "1.1.1",
+  "version": "2.0.0-beta.0",
   "description": "React toolkit for Streamr.",
   "main": "dist/bundle.js",
   "scripts": {
