--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "NODE_ENV=production webpack --mode=production --progress",
     "prepack": "npm run build",
     "start": "webpack --progress --colors --watch --mode=development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test jest"
   },
   "keywords": [
     "streamr",
