--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "incremental": true,
-    "target": "esnext",
+    "target": "es2019",
     "module": "commonjs",
     "jsx": "react",
     "declaration": true,
