--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^27.3.1",
+    "prettier": "^2.8.1",
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-test-renderer": "^17.0.2",
