--- a/package.json
+++ b/package.json
@@ -52,12 +52,12 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
-  "dependencies": {
-    "deep-equal": "^2.0.5"
-  },
   "peerDependencies": {
     "process": "^0.11.10",
     "react": "^18.2.0",
     "streamr-client": "^7.2.0"
+  },
+  "dependencies": {
+    "react-fast-compare": "^3.2.0"
   }
 }
