Extend stream id’s type (string → StreamDefinition)

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,6 @@
 {
-  "extends": "eslint-config-streamr-ts"
+    "extends": "eslint-config-streamr-ts",
+    "rules": {
+        "indent": "off"
+    }
 }
