Webpack → rollup; tweaks, deps update, etc.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,11 @@
 {
     "compilerOptions": {
-        "allowJs": true,
-        "incremental": true,
-        "target": "es2019",
-        "module": "commonjs",
-        "jsx": "react",
-        "declaration": true,
-        "sourceMap": true,
-        "outDir": "dist",
-        "strict": true,
-        "noImplicitAny": true,
         "baseUrl": ".",
+        "jsx": "preserve",
+        "sourceMap": true,
+        "strict": true,
+        "target": "ESNext",
+        "module": "ESNext",
         "paths": {
             "~": ["src"],
             "~/*": ["src/*"]
@@ -18,6 +13,7 @@
         "types": ["jest"],
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "moduleResolution": "node"
     }
 }
