--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,10 @@
 {
     "presets": [
-        "@babel/preset-env",
-        "@babel/preset-react"
-    ],
-    "plugins": [
-        "@babel/plugin-transform-runtime"
+        [
+            "@babel/preset-react",
+            {
+                "runtime": "automatic"
+            }
+        ]
     ]
 }
