--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "streamr-client-react",
   "version": "3.0.0-beta.4",
   "description": "React toolkit for Streamr.",
-  "main": "dist/bundle.js",
-  "types": "dist/src/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
-    "build": "NODE_ENV=development webpack --mode=development --progress",
-    "prepack": "npm run build",
-    "start": "webpack --progress --colors --watch --mode=development",
+    "prettier": "prettier --write src",
+    "start": "rollup -c -w",
+    "build": "rollup -c",
+    "prepack": "npm run clean && npm run build",
+    "clean": "rm `bin/clean` || true",
     "test": "NODE_ENV=test jest --detectOpenHandles"
   },
   "keywords": [
@@ -23,9 +25,10 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-url": "^8.0.1",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/deep-equal": "^1.0.1",
     "@types/jest": "^29.2.4",
@@ -33,7 +36,7 @@
     "@types/react": "^18.0.26",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
-    "babel-loader": "^9.1.0",
+    "esbuild": "^0.17.4",
     "eslint": "^8.30.0",
     "eslint-config-streamr-ts": "^4.1.0",
     "eslint-plugin-promise": "^6.1.1",
@@ -44,18 +47,19 @@
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-test-renderer": "^18.2.0",
-    "streamr-client": "^7.2.0",
-    "streamr-client-protocol": "^13.0.0",
+    "rollup": "^3.10.1",
+    "rollup-plugin-dts": "^5.1.1",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "streamr-client": "7.3.0-beta.0",
+    "streamr-client-protocol": "*",
     "ts-jest": "^29.0.3",
-    "ts-loader": "^9.4.2",
-    "typescript": "^4.9.4",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "typescript": "^4.9.4"
   },
   "peerDependencies": {
     "process": "^0.11.10",
     "react": "^18.2.0",
-    "streamr-client": "^7.2.0"
+    "streamr-client": "^7.3.0-beta.0",
+    "streamr-client-protocol": "^13.0.0"
   },
   "dependencies": {
     "react-fast-compare": "^3.2.0"
