--- a/.npmignore
+++ b/.npmignore
@@ -1,13 +1,9 @@
 .babelrc
-webpack.config.js
-tsconfig.json
-types/streamr-client.d.ts
+.envrc
 .eslintrc
-jest.config.js
-test
-/src
-dist/jest*
-dist/tsconfig*
-dist/webpack*
 .prettier*
 .vscode*
+/*.config.mjs
+/*.json
+/src
+test
