--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
   },
   "peerDependencies": {
     "process": "^0.11.10",
-    "react": "^18.2.0",
-    "streamr-client": "^7.3.0-beta.0",
+    "react": ">=16.8.0",
+    "streamr-client": ">=7",
     "streamr-client-protocol": "^13.0.0"
   },
   "dependencies": {
