--- a/package.json
+++ b/package.json
@@ -31,37 +31,36 @@
     "@rollup/plugin-url": "^8.0.1",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/deep-equal": "^1.0.1",
-    "@types/jest": "^29.2.4",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "esbuild": "^0.17.4",
-    "eslint": "^8.30.0",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.11.19",
+    "@types/react": "^18.0.27",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "esbuild": "^0.17.6",
+    "eslint": "^8.33.0",
     "eslint-config-streamr-ts": "^4.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "prettier": "^2.8.1",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "prettier": "^2.8.3",
     "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-fast-compare": "^3.2.0",
     "react-test-renderer": "^18.2.0",
-    "rollup": "^3.10.1",
+    "rollup": "^3.14.0",
     "rollup-plugin-dts": "^5.1.1",
     "rollup-plugin-esbuild": "^5.0.0",
     "streamr-client": "7.3.0-beta.0",
     "streamr-client-protocol": "*",
-    "ts-jest": "^29.0.3",
-    "typescript": "^4.9.4"
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
     "process": "^0.11.10",
     "react": ">=16.8.0",
+    "react-fast-compare": "^3.2.0",
     "streamr-client": ">=7",
     "streamr-client-protocol": "^13.0.0"
-  },
-  "dependencies": {
-    "react-fast-compare": "^3.2.0"
   }
 }
