--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-url": "^8.0.1",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/deep-equal": "^1.0.1",
@@ -44,23 +46,22 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "prettier": "^2.8.3",
-    "process": "^0.11.10",
     "react": "^18.2.0",
-    "react-fast-compare": "^3.2.0",
     "react-test-renderer": "^18.2.0",
     "rollup": "^3.14.0",
     "rollup-plugin-dts": "^5.1.1",
     "rollup-plugin-esbuild": "^5.0.0",
     "streamr-client": "7.3.0-beta.0",
-    "streamr-client-protocol": "*",
+    "streamr-client-protocol": "^13.0.0",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
+    "react": ">=16.14",
+    "streamr-client": ">=7"
+  },
+  "dependencies": {
     "process": "^0.11.10",
-    "react": ">=16.8.0",
-    "react-fast-compare": "^3.2.0",
-    "streamr-client": ">=7",
-    "streamr-client-protocol": "^13.0.0"
+    "react-fast-compare": "^3.2.0"
   }
 }
