--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
     "process": "^0.11.10",
     "react": ">=16.8.0",
     "react-fast-compare": "^3.2.0",
-    "streamr-client": ">=7",
-    "streamr-client-protocol": "^13.0.0"
+    "streamr-client": ">=7"
   }
 }
