--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "rollup": "^3.14.0",
     "rollup-plugin-dts": "^5.1.1",
     "rollup-plugin-esbuild": "^5.0.0",
-    "streamr-client": "^100.0.0-testnet-one.0",
+    "@streamr/sdk": "^100.0.0-rc.0",
     "streamr-client-protocol": "*",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
@@ -65,6 +65,6 @@
     "process": "^0.11.10",
     "react": ">=16.8.0",
     "react-fast-compare": "^3.2.0",
-    "streamr-client": "^100.0.0-testnet-one.0"
+    "@streamr/sdk": "^100.0.0-rc.0"
   }
 }
