--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-react": "^7.18.6",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-url": "^8.0.1",
+    "@streamr/sdk": "^102.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/deep-equal": "^1.0.1",
     "@types/jest": "^29.4.0",
@@ -56,15 +57,13 @@
     "rollup": "^3.14.0",
     "rollup-plugin-dts": "^5.1.1",
     "rollup-plugin-esbuild": "^5.0.0",
-    "@streamr/sdk": "^100.0.0-rc.0",
-    "streamr-client-protocol": "*",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
+    "@streamr/sdk": "^102.0.0",
     "process": "^0.11.10",
     "react": ">=16.8.0",
-    "@streamr/sdk": "^100.0.0-rc.0",
     "react-fast-compare": "^3.2.0"
   }
 }
